--- a/scalereg3/reports/templates/reports_payment_code_usage.html
+++ b/scalereg3/reports/templates/reports_payment_code_usage.html
@@ -14,6 +14,7 @@
   <th>Name</th>
   <th>Payment Code</th>
   <th>Ticket Type</th>
+  <th>Used</th>
   <th>Remaining Credits</th>
   <th>Attendees</th>
 </tr>
@@ -22,6 +23,7 @@
   <td>{{ entry.payment_code.order.name }}</td>
   <td>{{ entry.payment_code.code }}</td>
   <td>{{ entry.payment_code.badge_type.get_ticket_type_display }}</td>
+  <td>{{ entry.used_count }}</td>
   <td>{{ entry.payment_code.max_attendees }}</td>
   <td>
   {% if entry.attendee_count %}
